--- a/gb/24/2/2/n14171899.md
+++ b/gb/24/2/2/n14171899.md
@@ -1,9 +1,9 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>袁斌：中共已进入“历史的垃圾时间”</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/01/id14163538-000_9NF4DZ-600x400.jpg" />
-<h6>新年后，中共当局发布金融政策及相关经济数据，当日中国股市暴跌。图为上海一家证券公司的萤幕上显示股价走势。(Hector Retamal / AFP)
+<h6>新年后，中共当局发布金融政策及相关经济数据，中国股市应声暴跌。图为上海一家证券公司的资料图。(Hector Retamal/AFP)
 </h6>
 <hr>
 	<p>【大纪元2024年02月02日讯】“历史的垃圾时间”，是大陆资深媒体人胡文辉最近在一篇文章中提到的一个新概念，引起了很多人的关注和议论。</p>
@@ -14,62 +14,59 @@
 <p>1979年入侵阿富汗，是苏联的垃圾时间。它令苏联这个红色帝国陷入泥潭。1989东欧剧变，1991苏联崩溃，就是从1979开始的，戈尔巴乔夫只是让这段垃圾时间早点结束罢了。</p>
 <p>由此我想到一个问题：中共进入“垃圾时间”了吗？如果进入了，是从什么时候开始的？</p>
 <p>我的答案是肯定的：中共跟1979年入侵阿富汗的苏联一样，已经进入了垃圾时间，起点就是习近平在中共二十大上的连任。</p>
-<p>在这之前，中共为了挽救毛时代的统治危机，有限的放松了套在中国人民脖子上的绳索，三十多年的改革开放，令<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%BB%8F%E6%B5%8E.md#1">中国经济</a>起死回生，尤其是加入世贸组织，成为世界工厂后，中国经济更是保持了多年的高速增长，一跃而成全球第二大经济体。从表面上看，彼时的中国呈现出一片经济繁荣的景象。</p>
-<p>但习十八大接班后，中共重新收紧了套在中国人民脖子上的绳索，大开历史倒车，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%BB%8F%E6%B5%8E.md#1">中国经济</a>开始减速停滞，社会矛盾不断激化，党内外不满情绪蔓延，中共的统治危机越来越严重。外界因此把习封为“总加速师”。</p>
-<p>按照中共的“规矩”，习本该在二十大卸任，中共将换上新的总书记。如果是这样的话，新上来的党魁很可能会对习的政策有所调整，暂时缓和一下<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%9A%84%E5%8D%B1%E6%9C%BA.md#1">中共的危机</a>。但习改了中共的这个规矩，在二十大上继续连任。</p>
-<p>不仅如此，习还在二十大上一举剪除了中共的各个山头，把满朝文武几乎都变成了他的亲信，集权程度甚至超过了毛泽东。</p>
+<p>在这之前，中共为了挽救毛时代的统治危机，有限地放松了套在中国人民脖子上的绳索，三十多年的改革开放，令中国经济起死回生，尤其是加入世贸组织，成为世界工厂后，中国经济更是保持了多年的高速增长，一跃而成全球第二大经济体。从表面上看，彼时的中国呈现出一片经济繁荣的景象。</p>
+<p>但习十八大接班后，中共重新收紧了套在中国人民脖子上的绳索，大开历史倒车，中国经济开始减速停滞，社会矛盾不断激化，党内外不满情绪蔓延，中共的统治危机越来越严重。外界因此把习封为“总加速师”。</p>
+<p>按照中共的“规矩”，习本该在二十大卸任，中共将换上新的总书记。如果是这样的话，新上来的党魁很可能会对习的政策有所调整，暂时缓和一下中共的危机。但习改了中共的这个规矩，在二十大上继续连任。</p>
+<p>不仅如此，习还在二十大上一举剪除了中共的各个山头，把满朝文武几乎都变成了他的亲信，极权程度甚至超过了毛泽东。</p>
 <h2>这意味着什么？</h2>
-<p>意味着中共的一切，中国的一切，从此都要围着习一个人的指挥棒转。从中共到整个中国，彻底失去了纠错能力，只能听任习这个“总加速师”继续乱折腾。正是从这个时候开始，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E4%BA%A1%E5%85%9A%E4%BA%A1%E5%9B%BD.md#1">中共亡党亡国</a>的大局已定，任谁都再也改变不了了。</p>
+<p>意味着中共的一切，中国的一切，从此都要围着习一个人的指挥棒转。从中共到整个中国，彻底失去了纠错能力，只能听任习这个“总加速师”继续乱折腾。正是从这个时候开始，中共亡党亡国的大局已定，任谁都再也改变不了了。</p>
 <p>从二十大迄今中国经济的表现和走势，可以说是中共进入垃圾时间的集中体现。</p>
 <p>中共结束疫情防控后，外界普遍认为中国经济很快会复苏。结果不但没复苏，反而下滑得更厉害。</p>
 <p>2023年，中共为了救经济，不断推出各种应急举措，习甚至连自己的脸面都不顾，不惜改变过去的政策，结果到年底经济仍毫无起色，成了扶不起的阿斗。</p>
 <p>中共统计局不久前称，2023年“经济运行持续回升向好，高质量发展取得新成效。”当年中国GDP比上年增长5.2%。</p>
 <p>了解内情的人都知道，这纯粹就是数字造假，粉饰门面。</p>
-<p>据日本《产经新闻》1月28 日发布的报道，中国真实的经济增长与中国政府公开的数字大相径庭，2023 年的 GDP 成长率应为负成长。</p>
-<p>该报特派记者田村秀男利用对 GDP 有较大影响力的不动产投资、净出口额以及居民消费三项数据进行粗略的估算， 发现2023年中国GDP 的真实变化数据应该是-3.2% ，即使加上通货膨胀的影响应该也至少是 -2%。</p>
-<h2>最能够体现当下中国经济败像的莫过于股市</h2>
+<p>据日本《产经新闻》1月28日发布的报导，中国真实的经济增长与中国政府公开的数字大相径庭，2023年的GDP成长率应为负成长。</p>
+<p>该报特派记者田村秀男利用对GDP有较大影响力的不动产投资、净出口额以及居民消费三项数据进行粗略的估算，发现2023年中国GDP的真实变化数据应该是-3.2%，即使加上通货膨胀的影响应该也至少是-2%。</p>
+<h2>最能够体现当下中国经济败象的莫过于股市</h2>
 <p>中国股市一直在下跌。上周三，一连串北京“救市救经济”的消息宣布后，港股和海外中国资产应声拉升，人民币汇率也直线拉升。截至收盘，恒指和科指大涨3.6%和4.2%。</p>
 <p>但是好景不长。上周四开始股市又从小跌到大跌，至本周三沪指连跌数日。创业板指数重返4年半前水平。恒指跌破万六。</p>
-<p>1月31日，A股开盘一度冲高，午后全面下挫。沪深 300 指数跌至五年低点，下跌 0.91%，收于 3,215.35 点。沪指收盘下跌1.48%，报2788点，再度失守2800点关卡；深成指下跌1.95%，报8212点；创业板指下跌0.66%，报1573点，续创波段新低。</p>
+<p>1月31日，A股开盘一度冲高，午后全面下挫。沪深300指数跌至五年低点，下跌0.91%，收于 3,215.35点。沪指收盘下跌1.48%，报2,788点，再度失守2,800点关卡；深成指下跌1.95%，报8,212点；创业板指下跌0.66%，报1,573点，续创波段新低。</p>
 <p>A股1月份惨跌作收，三大指数月线6连黑，创历史纪录。沪指本月跌逾6%，已是受伤最轻；深成指跌逾13%；创业板指跌逾16%；科创50指数跌近20%；北证50指数大跌22%。</p>
 <p>财经媒体格隆汇专栏作家万连山撰文称，“又是惨烈的一天”：沪深跌，恒生落；两市翻，股民哭。几时才是头？</p>
 <p>文章模仿唐人杜牧《阿房宫赋》写道：“五日一雷，十日一崩。理财神话，挨个沉沦。主力之资，戏国戏民；涨一跌三，钩心斗角。凛凛焉，饕鬄状，大鱼吞虾，刀割韭菜，七零八落！掏钱炒股，以身伺虎。上班看盘，大脑糊涂。偶逮黑马，连板涨停，歌台暖响，会所征途。多遭杀鸡，生灵炭涂阴晴不定，不知何图。一日之内，一市之间，股民被屠。……</p>
 <p>“空头之心，日益骄固。北上一去，泪湿衣襟，可怜账户。嗟乎！空A者，A也，非外资也；贬沪深者，沪深也，非天下人也。使沪深各爱股民，则足以拒日经、纳斯达克；使大A爱其韭菜，则递三日可至万日而为牛市，谁得而做空也？使天下之博弈多以百姓之心为心，则寰宇平安也。股民不暇自哀，而后辈哀之；后来者哀之若不鉴之，亦使后人而复哀后人也。”</p>
 <p>跨入2024年，天灾人祸频发，中南海一片愁云惨淡，又传出中共党魁患胰腺癌的消息。尽管中共还在垂死挣扎，但还能拖多久？</p>
-<p>责任编辑：金岳</p>
+<p>责任编辑：金岳#</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/12/n14115024.md#1">中山二院实验室集体患癌事件或为泄漏事故</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14140789.md#1">研究：阿司匹林抑制癌症扩散 降低死亡率21%</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/26/n14167280.md#1">周晓辉：传习患胰腺癌 是真是假？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/26/n14167386.md#1">王友群：中共党魁又被传出病重“谣言”？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/24/n14165769.md#1">这种杯子为何如此火爆 加州女子偷65个被捕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">更新：智能秤帮你管理体重 记录13项身体数据</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/12/n14115024.md#1">中山二院实验室集体患癌事件或为泄漏事故</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/21/n14140789.md#1">研究：阿司匹林抑制癌症扩散 降低死亡率21%</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/26/n14167280.md#1">周晓辉：传习患胰腺癌 是真是假？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/26/n14167386.md#1">王友群：中共党魁又被传出病重“谣言”？</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/3/2/n10186094.md#1" target="_blank">林辉：天安门杀毛案疑点重重 侦案者冤狱七年</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/5/22/n11273123.md#1" target="_blank">汶川地震山崩地裂的那一刻</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/20/n10989886.md#1" target="_blank">共产暴政录：“清理阶级队伍”运动</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/14/4/15/n4132079.md#1" target="_blank">从唐山义女“探父蒙难”看古今对比</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/2/n14149352.md#1">【历史的瞬间】看是一幅画 听像一首歌——邓丽君</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/25/n14166654.md#1">【未解之谜】跨越30多年的“友情”原来外星人要这个（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/21/n14163155.md#1">人怕鬼还是鬼怕人 他们如何让鬼魅不敢侵犯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/19/n14161678.md#1">【古道人生】不知情之下娶了麻疯女 他怎么办？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/26/n14167203.md#1">药学博士：自幼伴随我的鼻敏感和哮喘消失了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/31/n14170736.md#1">【菁英论坛】边境铁丝网拆建 德州和联邦打乒乓</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/31/n14170546.md#1">【时事金扫描】中共台海挑衅 女特务在美被抓</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/1/n14171586.md#1">【晓天访谈】“打倒共产党” 柴松如何逃离中国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/30/n14169771.md#1">慰问老军头 习脚步不稳 传受查的许其亮露面</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/30/n14169647.md#1">网文：2024年中国哪些领域将被打回原形</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/29/n14169314.md#1">被钢琴家邀请到英国拍片 黄明志回复再讽中共</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/31/n14170432.md#1">TWICE Momo捐款助灾区 出国举手幅逗乐粉丝</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/31/n14170731.md#1">唐嫣自曝婚前6次被分手 罗晋喊5个字即和好</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/30/n14169350.md#1">曾写抗疫歌吹捧钟南山 30岁音乐人牛涛猝逝</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/30/n14170017.md#1">杨幂首次回应3亿对赌传闻 多个话题登热搜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/26/n14166802.md#1">烧焦的锅不要扔 用小苏打清理焕然一新</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">SONGMICS 6层大容量珠宝盒 带镜子（限时优惠）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/30/n14169802.md#1">房贷利率有回升迹象 买房留意了！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/24/n14165139.md#1">睡前简单6招拉筋操 助眠防抽筋</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/31/n14170369.md#1">飞机落地时不应该鼓掌？ 旅游专家教你礼仪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284473.md#1">老僧预言他将大祸临头 权倾天下的他将如何选择？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286164.md#1">【未解之谜】最可信的穿越者 他在历史中留下了证据</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289654.md#1">【音乐】五月的希望</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285490.md#1">故宫耐震神技夸世 建筑秘诀藏在何处？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289728.md#1">【未解之谜】“目睹”三次文明毁灭 濒死中看到未来</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289636.md#1">【中国禁闻】揭油罐车黑幕 记者韩福涛据传失联</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290106.md#1">【时事军事】共军真要去欧洲打仗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289717.md#1">衡阳保卫战电影被禁 分析：中共抹杀历史</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289299.md#1">中国6月进出口数据现警讯 贸易冲突或加剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289679.md#1">2024年美国生活最昂贵和最便宜的十个州</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290122.md#1">演唱会中途不停要喝水 刘德华身体状况引担忧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288874.md#1">胡歌首谈夫妻相处模式 大赞老婆付出很多</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289693.md#1">力压张若昀和胡歌 朱一龙获陆剧小生演技冠军</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290096.md#1">油管史上第一人 网红MrBeast频道订阅数破3亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289755.md#1">张艺兴演唱会上为母亲庆生 一口误引全场笑声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290376.md#1">美国癌症协会：4成癌症病例与生活习惯有关</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287768.md#1">物价上涨如何省钱？养成19个购物习惯超实用</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285229.md#1">研究：咖啡有助于抵消与年龄有关的肌肉流失</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281710.md#1">吸食大麻健康危害大 七招让你远离</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289225.md#1">观赏奥运要小心 看错比赛肚子恐怕会胖一圈</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/2/2/n14171899.htm">袁斌：中共已进入“历史的垃圾时间”</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/24/2/2/n14171899.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/2/2/n14171899.htm">袁斌：中共已进入“历史的垃圾时间”</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/2/2/n14171899.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
